feat: created infrastructure type entity across all layers
